[package]
name = "rich_text_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
maud = "0.26.0"
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5.1", features = ["util"] }
reqwest = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }