[package]
name = "html_ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
color-eyre = { workspace = true }
markup5ever = "0.14.0"
html5ever = "0.29.0"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.0"
walkdir = "2.0.2"
env_logger = { workspace = true }
log = { workspace = true }
tendril = "0.4.0"
dotenv = "0.15.0"
tokio = { workspace = true }